Updated comments, updated swagger documentation, deleted some uneccesary files.
